--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,17 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="hello_message">Welcome from this weird ass app!</string>
+    <string name="hello_message">Welcome you are on settings page!</string>
     <string name="second_text"></string>
     <string name="first_field">default value</string>
     <string name="submit_button_main">Submit</string>
     <string name="ViewOffers">View Offers</string>
+    <string name="hello_message_graphs">Hello from graphs fragment</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
+    <string name="expense_icon">Expense Icon</string>
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
         volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
@@ -47,4 +48,12 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+    <string name="user">User</string>
+    <string name="settings">Settings</string>
+    <string name="charts">Charts</string>
+    <string name="add">Add</string>
+    <string name="home">Home</string>
+    <string name="food">Food</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello from home fragment</string>
 </resources>
