--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,12 @@
     <string name="currency_prompt">Currency</string>
     <string-array name="currency_options">
         <item>USD</item>
+        <item>ALL</item>
+        <item>FRF</item>
+        <item>USD</item>
+        <item>CAD</item>
+        <item>RUB</item>
+        <item>TRY</item>
         <item>EUR</item>
         <item>GBP</item>
         <item>INR</item>
